Refactoring and added more styling to the create-fundraiser pages, and fixed a bug in the start page not showing for users who has not sign up

--- a/src/styles/fundraiser.module.css
+++ b/src/styles/fundraiser.module.css
@@ -15,3 +15,7 @@
   width: 100%;
   border-radius: 10px;
 }
+
+.disclaimer{
+  text-align: center;
+}
